--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "version:patch": "npm version patch -m 'v%s'",
+    "version:minor": "npm version minor -m 'v%s'",
+    "version:major": "npm version major -m 'v%s'",
+    "release": "npm run build && npm run package"
   },
   "dependencies": {
     "jszip": "^3.10.1",
